--- a/.istanbul.yml
+++ b/.istanbul.yml
@@ -1,6 +1,6 @@
 verbose: false
 instrumentation:
-  excludes: ['coverage/**', 'index.js']
+  excludes: ['coverage/**', 'index.js','public/**','server/weather/*.js']
   include-all-sources: true
 reporting:
     print: summary
